--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
+    "expo-clipboard": "^7.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
