--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "esModuleInterop": true,
+    "jsx": "react"
   },
   "include": [
     "**/*.ts",
