--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-root-toast": "^4.0.1",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
