Highligh is linked. Refactor highlight management: Implement fetching, adding, updating, and deleting highlights from Supabase. Enhance employee and trainee home screens to display highlights dynamically. Update TypeScript configurations and clean up unused files for improved project structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
     "types": [],
@@ -9,12 +8,25 @@
       ]
     },
     "esModuleInterop": true,
-    "jsx": "react"
+    "jsx": "react",
+    "target": "esnext",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
