--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
