--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "readable-stream": "^4.7.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "expo-document-picker": "~13.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
