--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^7.4.2",
     "@supabase/supabase-js": "^2.52.1",
     "base64-arraybuffer": "^1.0.2",
+    "buffer": "^6.0.3",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "^7.1.5",
