--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "readable-stream": "^4.7.0",
-    "util": "^0.12.5",
-    "expo-document-picker": "~13.1.6"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
